# backend_hotel_dd

./: .env  main.py  pyproject.toml  requirements.txt  test_sendgrid.py
controllers/: apartment_controller.py  booking_controller.py  contact_controller.py  department_controller.py  image_controller.py  restaurant_controller.py  room_controller.py  service_controller.py  testimonial_controller.py  user_controller.py
core/: cloudinary_config.py  config.py  database.py  security.py
models/: apartment_image_model.py  apartment_model.py  booking_model.py  contact_model.py  department_model.py  image_model.py  restaurant_model.py  room_image_model.py  room_model.py  service_model.py  testimonial_model.py  user_model.py
routers/: admin_router.py  apartment_router.py  booking_router.py  contact_router.py  department_router.py  gallery_router.py  hero_router.py  restaurant_router.py  room_router.py  service_router.py  stats_router.py  testimonial_router.py  user_router.py
schemas/: apartment_schema.py  booking_schema.py  contact_schema.py  department_schema.py  image_schema.py  restaurant_schema.py  room_schema.py  service_schema.py  testimonial_schema.py  user_schema.py
