[project]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = [
    {name = "Ernesto Vicencio Mas",email = "masoneweernesto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pyproject"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"  # Soporta Pydantic v2
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.7.0"  # v2
pydantic-settings = "^2.3.0"  # Compatible con v2
pymysql = "^1.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"